# kepler-benchmarks

./: CMakeLists.txt  Makefile  README.md  example.c
.github/workflows/: tests.yml
benchmarks/: CMakeLists.txt  basic_baseline.c  basic_iter_first.c  basic_iter_third.c  basic_simple.c
include/kepler_benchmarks/: helpers.h  kb_math.h  problems.h  solvers.h
include/kepler_benchmarks/problems/: basic.h  problem.h  utils.h
include/kepler_benchmarks/solvers/: baseline.h  brandt.h  iterative.h  refiners.h  simple.h  starters.h
include/kepler_benchmarks/tests/: simple.h  test.h
src/: test_simple.c
tests/: CMakeLists.txt  helpers.h  test_brandt.c  test_iter_first.c  test_iter_third.c
