include_directories(${CMAKE_CURRENT_LIST_DIR})
file(GLOB_RECURSE all_sources RELATIVE ${CMAKE_CURRENT_LIST_DIR} *.c)

foreach(source ${all_sources})
  get_filename_component(source_name ${source} NAME_WE)
  add_executable(${source_name} ${source})
  if(WIN32)
    target_compile_options(${source_name} PUBLIC /Wall /bigobj)
  else()
    target_compile_options(${source_name} PUBLIC -Wall -pedantic -Wextra -Werror -ffast-math -march=native)
  endif()
  target_link_libraries(${source_name} PUBLIC ${LIBM_LIBRARIES})
  add_test(NAME ${source_name} COMMAND ${source_name})

  message(STATUS "Adding test: ${source_name}")
endforeach()